# DataKit

./: .gitignore  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  PLAN.md  PRD.md  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  worklog.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  secrets-scan.yml
docs/: FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  SPEC.md
docs/adr/: ADR-001-processing-engine.md  ADR-002-streaming-strategy.md  ADR-003-schema-evolution.md  ADRS.md
docs/journeys/manifests/: main-flow.json
docs/operations/: journey-traceability.md
docs/research/: DATA_PROCESSING_SOTA.md
docs/sessions/20260428-taskfile-datakit/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
docs/sota/: SOTA.md
docs/worklogs/: README.md
go/: go.work
python/db-kit/: README.md  pyproject.toml
python/db-kit/tenancy/: __init__.py
python/db_kit/: __init__.py  pyproject.toml  supabase_client.py
python/db_kit/adapters/: neon.py  postgres.py  supabase.py
python/db_kit/pooling/: connection_pool.py
python/db_kit/realtime/: supabase.py
python/db_kit/storage/: supabase.py
python/db_kit/vector/: __init__.py
rust/: Cargo.toml
rust/phenotype-cache-adapter/: Cargo.toml
rust/phenotype-cache-adapter/src/: lib.rs
rust/phenotype-event-bus/: .gitignore  Cargo.toml
rust/phenotype-event-bus/src/: lib.rs
rust/phenotype-event-sourcing/: Cargo.toml
rust/phenotype-event-sourcing/examples/: usage.rs
rust/phenotype-event-sourcing/src/: lib.rs
rust/phenotype-in-memory-store/: Cargo.toml
rust/phenotype-in-memory-store/src/: lib.rs
tests/: conftest.py  test_caching.py  test_database.py  test_events.py  test_storage.py
