[workspace]
resolver = "2"
members = [
    "phenotype-cache-adapter",
    "phenotype-event-bus",
    "phenotype-event-sourcing",
    "phenotype-in-memory-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/DataKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
