[workspace]
resolver = "2"
members = [
    "phenotype-event-bus",
    "phenotype-in-memory-store",
]
# phenotype-cache-adapter and phenotype-event-sourcing migrated to canonical
# phenoShared (KooshaPari/phenoShared) per kit-sdk-vendor-pattern-audit.
# Consumers in this workspace: none — the vendored copies were dead weight.
# Re-add as path/git dependencies only when a DataKit crate consumes them.

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/DataKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
