[project]
name = "pheno-db-kit"
version = "0.1.0"
description = "Universal database abstraction with RLS, multi-tenancy, and connection pooling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Phenotype", email = "dev@phenotype.dev"}
]
requires-python = ">=3.10"
keywords = ["database", "supabase", "postgresql", "neon", "async", "rls", "multi-tenancy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0"
]

[project.optional-dependencies]
supabase = [
    "supabase>=2.0"
]
neon = [
    "asyncpg>=0.29.0",
    "httpx>=0.24.0"
]
turso = [
    "libsql-client>=0.1"
]
all = [
    "pheno-db-kit[supabase]",
    "pheno-db-kit[neon]",
    "pheno-db-kit[turso]"
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/phenotype/db-kit"
Documentation = "https://github.com/phenotype/db-kit/blob/main/README.md"
Repository = "https://github.com/phenotype/db-kit.git"
Issues = "https://github.com/phenotype/db-kit/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "core*", "migrations*", "platforms*", "pooling*", "query*", "realtime*", "rls*", "storage*", "tenancy*", "vector*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
