[package]
name = "phenotype-cache-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# NOTE: phenotype-contracts is not a member of this DataKit workspace and was
# previously referenced via a broken `path = "../phenotype-contracts"`.
# Sourcing from phenoShared (canonical home) for reproducible builds.
phenotype-contracts = { git = "https://github.com/KooshaPari/phenoShared.git", branch = "main" }
dashmap = { workspace = true }
lru = { workspace = true }
moka = { workspace = true, features = ["future"] }
serde = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio.workspace = true

[features]
default = []
