[package]
name = "phenotype-event-bus"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }

[lib]
name = "phenotype_event_bus"
path = "src/lib.rs"
