[package]
name = "phenotype-in-memory-store"
version = "0.2.0"
edition = "2021"
description = "Generic in-memory store implementations for testing and development"
authors = ["Phenotype Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["sync", "macros"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["test-util", "macros"] }
futures = "0.3"

[features]
default = []
test-util = []